--- a/hometown.html
+++ b/hometown.html
@@ -252,7 +252,7 @@
 
 <div class="slider7">
 
-    <div class="slide"><img src="images/hometown/11.png"></divt
+    <div class="slide"><img src="images/hometown/11.png"></div>
 
     <div class="slide"><img src="images/hometown/21.png"></div>
 
